2001-01-03  Adam Fedor  <fedor@gnu.org>

	* configure.in: Change test for objc forwarding hook to match gcc
	patch.
	* Source/GSFFCallInvocation.m: Use new forwarding hook.

2001-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: fix for checking windows executable file
	extensions - reported by michael.scheibler@onevision.de

2001-01-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSObjCRuntime.m (GSInstanceVariableInfo): fixes.
	* Source/NSObject.m ([NSObject -handleQueryWithUnboundKey:]): raise an
	exception.
	([NSObject -handleTakeValue:forUnboundKey:]): changed exception.
	([NSObject -unableToSetNilForKey:]): likewise.
	([NSObject -storedValueForKey:]),
	([NSObject -valueForKey:]): check for null selector before calling
	respondsToSelector:
	([NSObject -takeStoredValue:forKey:]),
	([NSObject -takeValue:forKey:]): likewise. Call GSSetValue with correct
	values.
	(GSSetValue): fixed ivar implementation.
	(GSGetValue): likewise.
	([NSObject -methodSignatureForSelector:]): FreeBSD fix.
	* Source/NSEnumerator.m|.h ([NSEnumerator -allObjects]): implemented.
	* Source/Unicode.m (GetDefEncoding): do not emit the warning for
	NSISOLatin1StringEncoding.

2000-12-26  Adam Fedor  <fedor@gnu.org>

	* configure.in: Look for libxml2 (patch from Kim Shrier
	<kim@tinker.com>).
	* acconfig.h: Define LIBXML2
	* Headers/gnustep/base/config.h.in: Regenerate
	* Headers/gnustep/base/GSXML.h: Include libxml2.h if found.
	* Source/GSXML.m: Likewise.
	* Tools/gsdoc.m: Likewise. (patches from Kim Shrier <kim@tinker.com>).

2000-12-22  Adam Fedor  <fedor@gnu.org>

	* Source/GSFFCallInvocation.m: Remove powerpc specific defs

2000-12-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: Modified DO_FORWARD_INVOCATION() macro
	and its uses so that they actually do what was intended :-)
	Also, modified implementation of methodSignatureForSelector: for
	ffcall library to prevent recursion.

2000-12-21  Richard Frith-Macdonald <rfm@gnu.org>
