@@ -89,11 +89,7 @@ Parameters:
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
-#ifdef	LIBXML2
-#include <libxml2/parser.h>
-#else
-#include <libxml/parser.h>
-#endif
+#include <parser.h>
 
 NSString	*pathExtension_GSDocRefs = @"gsdocrefs";
 NSString	*pathExtension_GSDoc = @"gsdoc";
