@@ -818,64 +818,18 @@ fi
 AC_SUBST(WITH_FFI)
 
 #--------------------------------------------------------------------
-# Check recent libxlm for Properytlists, GSXML, GSDoc etc.
+# Check recent libxml for Properytlists, GSXML, GSDoc etc.
 #--------------------------------------------------------------------
-echo "Checking for libxml"
-AC_ARG_WITH(libxml-include,
-  [  --with-libxml-include=PATH  include path for libxml headers],
-  libxml_incdir="$withval", libxml_incdir="no")
-
-AC_ARG_WITH(libxml-library,
-  [  --with-libxml-library=PATH  library path for libxml libraries],
-  libxml_libdir="$withval", libxml_libdir="no")
-
-cppflags_temp=$CFLAGS
-libs_temp=$LIBS
-
-if test "$libxml_incdir" != "no"; then
-  CPPFLAGS="$CPPFLAGS -I$libxml_incdir"
-fi
-if test "$libxml_libdir" != "no"; then
-  LIBS="$LIBS -L$libxml_libdir"
-fi
-
-xmlhdrdir=no
-# The order of these tests is important.
-AC_TRY_CPP([#include <libxml/xmlversion.h>
-#if LIBXML_VERSION < 20203
-#error libxml needs to be version 2.2.3 or later
-#endif], xmlhdrdir=libxml)
-if test $xmlhdrdir = no; then
-AC_TRY_CPP([#include <libxml2/xmlversion.h>
-#if LIBXML_VERSION < 20203
-#error libxml needs to be version 2.2.3 or later
-#endif], AC_DEFINE(LIBXML2) xmlhdrdir=libxml2)
-fi
-AC_MSG_RESULT($xmlhdrdir)
-if test $xmlhdrdir = no; then
-  echo "Could not find libxml headers"
-  echo "Check to make sure you have libxml version 2 or later installed"
-  AC_MSG_WARN(Could not find libxml headers)
-  HAVE_LIBXML=0
+AM_PATH_XML(2.2.3, enable_libxml=yes, enable_libxml=no)
+if test $enable_libxml = yes; then
+  CPPFLAGS="$CPPFLAGS $XML_CFLAGS"
+  LIBS="$LIBS $XML_LIBS"
+  HAVE_LIBXML=1
+  AC_DEFINE(HAVE_LIBXML)
 else
-  AC_TRY_CPP([#include "$xmlhdrdir/xmlversion.h"
-    #if LIBXML_VERSION < 20203
-    #error
-    #endif], libxml2plus=1, libxml2plus=0)
-  if test $libxml2plus = 0; then
-    echo "libxml version older than 2.2.3"
-    AC_MSG_WARN(libxml version older than 2.2.3)
-    HAVE_LIBXML=0
-  else
-    HAVE_LIBXML=1
-  fi
+  HAVE_LIBXML=0
 fi
 AC_SUBST(HAVE_LIBXML)
-
-if test "$HAVE_LIBXML" = "0"; then
-  CPPFLAGS="$cppflags_temp";
-  LIBS="$libs_temp";
-fi
 
 #--------------------------------------------------------------------
 # Check OpenSSL for HTTPS support.
